--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li class="nav-item"><a class ="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
                 <span class="navbar-text">
-                    <a data-toggle="modal" data-target="#loginModal">
+                    <a id="logIn">
                         <span class="fa fa-sign-in">
                         </span>
                         Login
@@ -90,7 +90,7 @@
                             <img src="img/logo.png" class="img-fluid" alt="">
                         </div>
                         <div class="col-sm-6 align-self-center">
-                            <a href="#reserve" class="btn btn-warning btn-lg btn-block" data-toggle="modal" data-target="#reserveModal">Reserve Table</a>
+                            <a href="#reserve" id="resTable" class="btn btn-warning btn-lg btn-block">Reserve Table</a>
                         </div>
                         <div id="reserveModal" class="modal fade" role="dialog">
                             <div class="modal-dialog modal-lg" role="content">
@@ -343,6 +343,12 @@
                     $('#carouselButton').children('span').removeClass('fa-play');
                     $('#carouselButton').children('span').addClass('fa-pause');
                 }
+            });
+            $('#logIn').click(function(){
+                $('#loginModal').modal();
+            });
+            $('#resTable').click(function(){
+                $('#reserveModal').modal();
             });
         })
     </script>
